<resources>
    <string name="app_name">Foodie app</string>
    <string name="cookidea">Daily cooking Ideas</string>
    <string name="urdu">آج کیا پکائیں</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="urdubreak">ناشتہ</string>
    <string name="urdulunch">دوپہرکا کھانا</string>
    <string name="urdudinner">رات کا کھانا</string>
    <string name="choice">We have all choices for you</string>
    <string name="choice2">Select Anyone</string>
    <string name="login">Join us</string>
    <string name="signup">Signup</string>
    <string name="help">Help</string>
    <string name="suggestion">Suggestion</string>
    <string name="loginWelcome">Welcome Back</string>
    <string name="loginAcc">Sign in to your Accout</string>
    <string name="email">Email</string>
    <string name="forgetPass">Forget Password</string>
    <string name="loginBtn">Login</string>
    <string name="CreateAcc">Create free Account</string>
    <string name="HaveAnAcc">Do you have an Account?</string>
    <string name="AccountCreate">Create Account</string>
    <string name="nam">Name</string>
    <string name="AlreadyAcc">Already Have an Account?</string>
    <string name="name">Enter your name</string>
    <string name="email1">Enter your Email Address</string>
    <string name="Password">Create a Password</string>
    <string name="pass">Password</string>
    <string name="Breakfast_idea">Aj Nashty Kren -- آج ناشتہ کریں</string>
    <string name="Get_Recepie">Get Recepie From AI</string>
    <string name="Lunch_idea">Aj Lunch mai bnaen</string>
    <string name="dinner_idea">Aj Dinner mai bnaen</string>
    <string name="Create_post">Create new post</string>
    <string name="help_welcome">Welcome to FoodieApp Help</string>
    <string name="help_welcome2">Welcome to FoodieApp, your go-to app for all things food! Whether you\'re looking for daily cooking ideas or want to share your own recipes with the world, FoodieApp has got you covered. This help guide will walk you through the various features and functionalities of the app to help you get started.</string>
    <string name="help_text3">Creating an Account</string>
    <string name="help_text4">Open the FoodieApp on your device. Then tap on the Create free Account on the login screen. Fill in the required information, including your name, email address, and password. Tap on the Create Account button to complete the registration process. Congratulations! You now have an account and can explore all the features of FoodieApp.</string>
    <string name="help_text5">Daily Cooking ideas</string>
    <string name="help_text6">FoodieApp provides a wide range of daily cooking ideas to inspire your culinary adventures. Here\'s how you can find new recipes. On the home screen, navigate to the Daily Ideas tab. You can find daily cooking ideas according to your need whether it\'s breakfast, lunch or dinner.</string>
    <string name="help_text7">Creating Posts</string>
    <string name="help_text8">Tap on the Create Post button in the app\'s main screen. Then enter the title and description of your post. Tap on the Post button to share your creation with the FoodieApp community.</string>
    <string name="help_text9">Conclusion</string>
    <string name="help_text10">Enjoy Your FoodieApp Experience! We hope this help guide has provided you with a comprehensive overview of the features and functionalities of FoodieApp. Explore, create, and connect with food lovers around the world. If you have any further questions or need assistance, feel free to reach out to our support team.</string>
    <string name="Signout">Signout</string>
</resources>